[gd_scene load_steps=24 format=3 uid="uid://bau36gloc10pm"]

[ext_resource type="Script" uid="uid://cdw2ulhvdaem4" path="res://scripts/game.gd" id="1_yqjtg"]
[ext_resource type="PackedScene" uid="uid://depfltsstpn1g" path="res://scenes/platform.tscn" id="2_kvpfn"]
[ext_resource type="Script" uid="uid://c34y7immsx7l4" path="res://scripts/resource_defs/spawn_config.gd" id="3_dinhu"]
[ext_resource type="Script" uid="uid://3k1vhgr7sv5j" path="res://scripts/target_follower_camera.gd" id="3_iywne"]
[ext_resource type="Script" uid="uid://dtpul5yyc1bom" path="res://scripts/tools/spawner_tool.gd" id="3_lnu2h"]
[ext_resource type="PackedScene" uid="uid://dkgjh0su8kto5" path="res://scenes/ui.tscn" id="4_lbhrr"]
[ext_resource type="Script" uid="uid://cug0lmk5q4aqg" path="res://scripts/tools/platform_spawner_tool.gd" id="5_u5sy4"]
[ext_resource type="Texture2D" uid="uid://8i1wtw1ooo5o" path="res://assets/vignette_overlay.png" id="6_gee14"]
[ext_resource type="PackedScene" uid="uid://cstxbo85ymbf4" path="res://scenes/player.tscn" id="6_p57ef"]
[ext_resource type="Script" uid="uid://bpe3t4mmsfljg" path="res://scripts/tools/remover_tool.gd" id="7_dinhu"]
[ext_resource type="Script" uid="uid://0ucu2mlol1fl" path="res://scenes/build_camera_tracker.gd" id="8_gee14"]
[ext_resource type="Texture2D" uid="uid://mg4qa2dprnnt" path="res://assets/cursors/remove_tool.png" id="8_kvuet"]
[ext_resource type="Texture2D" uid="uid://bef7knpo1n4qi" path="res://icon.svg" id="9_0tnpc"]
[ext_resource type="Texture2D" uid="uid://dbihtelr4i2ii" path="res://assets/honey_overlay.png" id="10_trtic"]
[ext_resource type="Script" uid="uid://cvskdwo1bxr8l" path="res://scripts/honey_overlay.gd" id="11_ir15t"]
[ext_resource type="AudioStream" uid="uid://cnb6g22piwx2h" path="res://assets/audio/airy ambience marcelofg55.wav" id="16_ca42v"]

[sub_resource type="Resource" id="Resource_kvuet"]
script = ExtResource("3_dinhu")
scene = ExtResource("2_kvpfn")
metadata/_custom_type_script = "uid://c34y7immsx7l4"

[sub_resource type="Curve" id="Curve_ir15t"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.340824, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ir15t"]
frequency = 0.2

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_gee14"]
blend_mode = 3

[sub_resource type="Animation" id="Animation_ir15t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(0.176777),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_trtic"]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ca42v"]
_data = {
&"RESET": SubResource("Animation_ir15t"),
&"appear": SubResource("Animation_trtic")
}

[node name="Game" type="Node2D"]
script = ExtResource("1_yqjtg")
start_level = "res://scenes/levels/1/1_tutorial_biscuited.tscn"
last_building_tool = &"PlatformSpawnerTool"
last_tool_data = SubResource("Resource_kvuet")
time_slow = 0.0

[node name="PlayerFollowCamera" type="Camera2D" parent="." node_paths=PackedStringArray("target")]
zoom = Vector2(0.85, 0.85)
script = ExtResource("3_iywne")
target = NodePath("../Player")
speed = 15.0
shake_curve = SubResource("Curve_ir15t")
noise = SubResource("FastNoiseLite_ir15t")

[node name="Tools" type="Node" parent="."]

[node name="SpawnerTool" type="Node2D" parent="Tools"]
script = ExtResource("3_lnu2h")
metadata/_custom_type_script = "uid://dtpul5yyc1bom"

[node name="PlatformSpawnerTool" type="Node2D" parent="Tools"]
script = ExtResource("5_u5sy4")
metadata/_custom_type_script = "uid://cug0lmk5q4aqg"

[node name="RemoverTool" type="Node2D" parent="Tools"]
script = ExtResource("7_dinhu")
cursor = ExtResource("8_kvuet")
offset = Vector2(16, 16)
metadata/_custom_type_script = "uid://bpe3t4mmsfljg"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Vignette" type="TextureRect" parent="CanvasLayer"]
material = SubResource("CanvasItemMaterial_gee14")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_gee14")
expand_mode = 2

[node name="HoneyOverlay" type="TextureRect" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_trtic")
expand_mode = 2
script = ExtResource("11_ir15t")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/HoneyOverlay"]
libraries = {
&"": SubResource("AnimationLibrary_ca42v")
}

[node name="UI" parent="CanvasLayer" instance=ExtResource("4_lbhrr")]
offset_right = -1152.0
offset_bottom = -648.0

[node name="Player" parent="." instance=ExtResource("6_p57ef")]
position = Vector2(187, 227)

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(1, 0.917449, 0.922141, 1)

[node name="BuildCameraTracker" type="Marker2D" parent="." node_paths=PackedStringArray("anchor")]
position = Vector2(-300, 200)
script = ExtResource("8_gee14")
speed = 500.0
anchor = NodePath("../Player")
leash_length = 800.0

[node name="Icon" type="Sprite2D" parent="BuildCameraTracker"]
visible = false
scale = Vector2(0.1, 0.1)
texture = ExtResource("9_0tnpc")

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_ca42v")
autoplay = true

[connection signal="timeout" from="ResetTimer" to="." method="_on_reset_timer_timeout"]
